# CAOS_TRIZAR

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSES.md  README.md  STRUCTURE.md  index.html  package-lock.json  package.json  pyproject.toml  requirements-gpu.txt  requirements-precompute.txt  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data-pipeline/: README.md
data-pipeline/chancalab/: __init__.py  live.py  pipeline.py  registry.py
data/derived/: ae_scaler.json  ae_threshold.json  case-results.json
data/examples/: operating.csv
deploy/: pages.md
docs/: README.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_the-live-lane.md  05_precompute-pipeline.md  06_model-evaluation.md  07_deploy.md  08_data-contracts.md  README.md
docs/cases/: README.md
docs/frameworks/: README.md
docs/guides/: 00_run.md  01_precompute-pipeline.md  02_bring-your-own-data.md  03_gpu-lane.md  04_run-the-api.md  README.md
frontend/: copy-data.mjs  package-lock.json  package.json  vite.config.ts
frontend/public/: CNAME
frontend/src/: architecture.ts  main.tsx  trizar.css
public/: CNAME  ae_scaler.json  ae_threshold.json  psd-ae.onnx  scaler.json  surrogate.int8.onnx  surrogate.onnx  surrogate_metrics.json
scripts/: precompute.ps1  precompute.sh  setup.ps1  setup.sh
src/: main.tsx
src/data/: cases.ts  citations.ts
src/lib/: ort.ts
src/pages/: Benchmark.tsx  Experiments.tsx  Tool.tsx  (+2 more)
test/: physics.test.ts
tests/: conftest.py  test_contract.py  test_manifest.py  test_pipeline_smoke.py
(+104 files in other folders)
