# ChancaDEM — the offline engine package (instantiated from the CAOS product-repo archetype, ADR-0057).
# The DEFAULT pipeline is numpy-only (builds the replay layer from committed artifacts); the heavy lane (torch +
# the Node sweep of the TS engine) lives in requirements-precompute.txt and is documented in docs/frameworks/.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chancalab"
# PEP 440 form of the display version X.XX.XXX (see CHANGELOG.md + chancalab.__version__ = "0.03.000").
version = "0.3.0"
description = "ChancaDEM — crusher comminution studio (Whiten/Evertsson/Bond engine + surrogate MLP + denoising AE) as a staged offline pipeline with two data contracts (ADR-0057)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Felipe Santibáñez-Leal" }]
dependencies = ["numpy>=1.26"]

[tool.setuptools.packages.find]
where = ["data-pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["data-pipeline/chancalab/stages/dem.py"]  # the offline DEM tracer (WIP), linted separately

[tool.ruff.lint]
ignore = ["E741"]
